# aide

./: .env.example  .gitignore  .make-aliases  Makefile  README.md  REVIEW_GUIDELINE.md  TESTING_GUIDE.md  convo.md  docker-compose.yml  task.md
.claude/: CLAUDE.md  settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  registry.py
backend/app/config/: dependencies.py  exceptions.py  logging.py  schemas.py  settings.py
backend/app/db/: connection.py  repositories.py  tables.py  utils.py
backend/app/labs/: __init__.py  base.py
backend/app/routes/v1/: exceptions.py  sources.py  workspaces.py
backend/app/services/: ai.py  pdf_parser.py  source.py  supabase.py  workspace.py
backend/app/sources/: __init__.py  base.py  pdf.py
backend/migrations/: env.py
backend/migrations/versions/: d3272dd623f1_initial.py
backend/tests/: conftest.py
backend/tests/integration/: test_sources.py  test_workspaces.py
supabase/: config.toml
supabase/migrations/: 20251224143506_uploads_bucket.sql
