[project]
name = "backend"
version = "0.1.0"
description = "Backend Server For The AIDE Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.14.9",
    "ty>=0.0.3",
]
