[project]
name = "backend"
version = "0.1.0"
description = "Backend Server For The AIDE Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.125.0",
    "google-genai>=1.56.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.21",
    "sqlalchemy[asyncio]>=2.0.45",
    "structlog>=25.5.0",
    "supabase>=2.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.9",
    "ty>=0.0.3",
]
